# zope.generations

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  pyproject.toml  setup.py  tox.ini
docs/: api.rst  conf.py  details.rst  index.rst  requirements.txt
src/zope/app/generations/: README.txt  generations.py  testing.py  tests.py  utility.py
src/zope/app/generations/browser/: configure.zcml  managerdetails.py  managers.py  tests.py
src/zope/app/generations/demo/: __init__.py  evolve1.py  evolve2.py  install.py
src/zope/app/generations/demo3/: install.py
src/zope/generations/: README.rst  README.txt  __init__.py  configure.zcml  ftesting.zcml  generations.py  interfaces.py  subscriber.zcml  utility.py
src/zope/generations/demo/: __init__.py  evolve1.py  evolve2.py  evolve3.py  install.py
src/zope/generations/demo3/: __init__.py  install.py
src/zope/generations/tests/: test_backwardcompat.py  test_generations.py  test_zcml.py
